// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentReportStepHeader matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="step-header"
  >
    <h4
      class="step-header-name"
    >
      REQUIREMENT:
      <span
        class="screen-reader-only"
      >
        42 FAIL-tested
      </span>
    </h4>
    <span
      class="step-header-description"
    >
      <p>
        DESCRIPTION
      </p>
    </span>
    -
    <mock-guidancelinks
      classnamefordiv="test-guidance-links-group"
      links="[object Object]"
    />
    <mock-outcomechip
      count="42"
      outcometype="fail"
    />
    <mock-guidancetags
      deps="[object Object]"
      links="[object Object]"
    />
  </div>
</DocumentFragment>
`;

exports[`AssessmentReportStepHeader matches snapshot: GuidanceLinks props 1`] = `
{
  "LinkComponent": [Function],
  "classNameForDiv": "test-guidance-links-group",
  "links": [
    {
      "href": "LINK_URL",
      "text": "LINK_TEXT",
    },
  ],
}
`;

exports[`AssessmentReportStepHeader matches snapshot: GuidanceTags props 1`] = `
{
  "deps": {
    "LinkComponent": [Function],
    "getGuidanceTagsFromGuidanceLinks": [Function],
    "outcomeTypeSemanticsFromTestStatus": [Function],
  },
  "links": [
    {
      "href": "LINK_URL",
      "text": "LINK_TEXT",
    },
  ],
}
`;
